--- a/math/math.html
+++ b/math/math.html
@@ -33,7 +33,7 @@
     <!--Other Navbar links for toggling-->
     <div class='collapse navbar-collapse navbar-right' id='navbar-main-menu'>
       <ul class='nav navbar-nav'>
-        <li class='home-btn'><a href='..\index.html#home'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
+        <li class='home-btn'><a href='..\index.html'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
         <li class='about-btn'><a href='..\index.html#about'>About Me</a></li>
         <li class='dropdown'>
           <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses
