--- a/english/iep/issueExploration.html
+++ b/english/iep/issueExploration.html
@@ -39,7 +39,7 @@
           <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses
           </a>
           <ul class='dropdown-menu'>
-            <li><a href='..\english\english.html'>English</a></li>
+            <li><a href='..\english.html'>English</a></li>
             <li><a href='..\..\math\math.html'>Math</a></li>
           </ul>
         </li>
