--- a/english/iep/issueExploration.html
+++ b/english/iep/issueExploration.html
@@ -48,16 +48,85 @@
   </div><!--/.container-fluid-->
 </nav><!--/.navbar-->
 
-<a name='iep'></a>
-<div class='iep'>
+<div id='iep'>
   <div class='iepBckgrnd'>
-    <div class='row'>
-      <div class='col-lg-4 collapse navbar-collapse bottomleft'>
-        <img class='text-right iepImg responsive-img' src='http://41.media.tumblr.com/c9d20a675fb1ea48c2b47169dd9d11e8/tumblr_nlr0z4VVBm1r9v0vvo1_1280.jpg'>
-      </div><!--/.navbar-collapse-->
-    </div><!--/.row-->
-  </div><!--/.iepBckgrnd-->
-</div><!--iep-->
+    <div class='container'>
+      <div class='row'>
+        <div class='col-lg-12'>
+          <div class='title'>
+            <h3>Swimming in the Light of Conservation or the Wrongs of Captivity</h3>
+            <h5 class='text-muted'>By Ashley Dix</h5>
+          </div>
+          <!--/.title-->
+        </div>
+        <!--/.col-lg-12-->
+      </div>
+      <!--/.row-->
+    </div>
+    <!--/.container-->
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-2 collapse navbar-collapse bottomleft'>
+          <img class='text-right iepImg responsive-img' src='http://41.media.tumblr.com/c9d20a675fb1ea48c2b47169dd9d11e8/tumblr_nlr0z4VVBm1r9v0vvo1_1280.jpg'>
+        </div>
+        <!--/.col-lg-4-->
+        <div class='col-md-offset-2 col-md-8'>
+          <div class='iepBody'>
+            <p>The thing that makes the world around us so magnificent and wondrous, is largely, who and what we share this world with. Throughout my life, I have always taken an immense interest in animals and nature. So, it seemed natural to me to explore a topic related to this lifelong interest after having a brief disagreement with a friend about captive orcas at SeaWorld. While I love animals, I had never given much thought to whether or not the captivity of orcas at SeaWorld was inhumane, or educational and beneficial. I admit as a child, I saw one of the performances that SeaWorld put on in California, even being splashed by the waves caused by jumping orcas at the end. For me this serves as a fond childhood memory of a family related vacation. Through my adult eyes however, I now have to wonder, is this wrong? What does the answer to this question look like through another’s eyes?</p>
+            <p>Orcas are fascinating mammals. Many people mistakenly believe that orcas are whales, when in fact, according to the Integrated Taxonomic Information System (ITIS), they are in the same family as dolphins and pilot whales called, Delphinidae, with the genus and species being called Orcinus orca. The National Oceanic and Atmospheric Administration (NOAA) notes that genetic studies have led many cetacean biologists to hypothesize that multiple species or subspecies of orca exist worldwide, with three distinct forms being recognized: resident, transient and offshore. <a href='#3'><sup>[3]</sup></a></p>
+            <p>Native American Cultures of the North West Coast call orcas “blackfish”, and consider them a source of power. <a href='#4'><sup>[4]</sup></a> Additionally, orcas are also known as “killer whales”, and are apex predators, with humans alone responsible for hunting them.<a href='#'><sup>[3]</sup></a> Their size is enormous, between 23 to 32 feet and weighing up to 6 tons, relative in size to a school bus. They have a life span comparable to humans, between 50-80 years in the wild.<a href='#7'><sup>[7]</sup></a> However, a killer whale called “Granny”, who is the matriarch of wild J-Pod, is estimated to be 103 years old. Furthermore, orcas are very intelligent and have brains that can weigh up to 15 pounds. MRI scans have shown that their brain lobes, that deal with emotions, are enlarged, and the cortex may have a level higher than humans; leading many to believe that they have a strong sense of self<a href='#1'><sup id='haney'>[1]</sup></a> and may be more emotionally developed than humans.<a href='#4'><sup>[4]</sup></a></p>
+            <p>Orcas live in family groups called “pods”, with up to 40 individuals <a href='#7'><sup>[7]</sup></a>, and offspring often remain with their mother for life. <a href='#4'><sup>[4]</sup></a> Pods use echolocation, and each one has a unique dialect that its members recognize, even at a distance. With this communication pods work together, and other adolescent females will even assist a mother in caring for her offspring. Killer whales are very protective of their young <a href='#7'><sup>[7]</sup></a>, and members of wild pods have even been documented trying to create decoys when being hunted, in an attempt to lead humans after adult whales, while mothers and babies make an attempted escape. Sadly, with the help of helicopters, their attempts were futile.<a href='#'><sup name='blackfish1'>[2]</sup></a></p>
+            <p>The documentary Blackfish Never Capture What You Can’t Control, was released in 2013 and shown at the Sundance Film Festival. <a href='#7'><sup>[7]</sup></a> It took a very strong stance against having orcas in captivity and was powerful in rallying viewers to its side. Upon viewing Blackfish for myself, I can say there are many points made that are hard to ignore. The documentary largely focuses on SeaWorld’s bull orca named Tilikum, the largest orca in captivity <a href='#13'><sup>[13]</sup></a>, who was just named the world’s second most influential living animal of 2016 <a href='#11'><sup>[11]</sup></a>, and is sadly credited with the deaths of 3 trainers <a href='#7'><sup>[7]</sup></a>. However, there are also incidents with handfuls of other orcas mentioned as well.</p>
+            <p>Tilikum, nicknamed “Tilly”, was originally captured in 1983 near Reykjavik, Iceland at 2 years old. He was transferred to Sealand of the Pacific in South Oak Bay, British Columbia after a year spent in a holding tank in an Icelandic zoo, before eventually being transferred to SeaWorld, Orlando in 1992, roughly a year after the first death he was involved with. During his time at Sealand two older female Orcas named Haida II and Nootka IV behaved aggressively towards him. <a href='#13'><sup>[13]</sup></a> There are claims that the treatment “Tilly” received from humans and the other Orcas alike lead to him receiving psychological damage. Although, it is also argued that the close confinement, separation from pods, specifically mothers and their calves, and the minuscule size of tanks and living space in captivity, has caused all orcas psychological distress and trauma, leading many to lash out aggressively. <a href='#7'><sup>[7]</sup></a></p>
+            <p>It appears the assertion that killer whales are unsuited to captivity is supported by the numerous violent or dangerous incidents, documented between humans and captive orcas between 1967 and 2015. There are at least 151 documented incidents, which include anything from orcas accidentally knocking trainers into the water, scratches, puncture wounds, broken bones, submerged trainers and even death. <a href='#6'><sup>[6]</sup></a></p>
+            <p>It is important to understand what the driving force of an orca can be. Even the most loving of beings has needs, instincts and abilities that promote its overall behavior. The popular comparison to captive orcas living in a bathtub is not that far off. Wild orcas can swim up to 100 miles a day, with bursts of speed reaching close to 30mph, and dive to depths of 328 feet or more. All abilities restricted for captive orcas. <a href='#15'><sup>[15]</sup></a></p>
+            <p>However, is it really possible that humans are capable of confining such beautiful animals without gaining any real benefits? Although, at first glance it may not be the most notable, or sensational information, SeaWorld has contributed greatly to the knowledge, we as a general public, now have of orcas. SeaWorld has the largest collection of orcas in a zoological setting. The orcas in their care allow a unique environment for researchers to have the advantage of studying animals who are trained and able to cooperate. Researchers are able to monitor these individuals daily for long periods of time. This creates a controlled setting for science that is impossible to replicate in the wild and extremely beneficial for studying information we would not otherwise have up close access to. <a href='#10'><sup>[10]</sup></a> This includes research done by biologist Dawn Noren, who studies how female killer whales pass toxins to their calves through their milk. <a href='#8'><sup>[8]</sup></a></p>
+            <p>Research is carried out by SeaWorld’s own research staff, by scientists from national and international universities, and research organizations, including UCLA, the San Diego Zoo, and the Hubbs-SeaWorld Research Institute. Results of this research is published in peer-reviewed journals, with SeaWorld scientists having authored or co-authored 50 published papers, specific to orcas. While killer whales are not classified as endangered, the distinct population segment of Southern Resident killer whales off the U.S. and Canadian Pacific Coast are listed as endangered by the National Marine Fisheries Service. SeaWorld hopes that by making research available to the scientific community, it may one day help researchers understand why this population of orcas are in decline, and even help reverse the trend.</p>
+            <p>Furthermore, SeaWorld provides resources and financial support to field research. This support is offered directly by SeaWorld through grants from the SeaWorld and Busch Gardens Conservation Fund&reg; and other qualified foundations such as the Hubbs-SeaWorld Research Institute. In fact, SeaWorld Entertainment, Inc. has announced a commitment of $1.5 million over 3 years to a new partnership with the National Fish and Wildlife Foundation (NFWF), through the Killer Whale Research and Conservation Program (KWRCP). Support of the KWRCP is part of SeaWorld’s $10 million pledge to fund research and conservation for orcas in the wild, which is the largest private commitment of its kind.</p>
+            <p>Another special projects related to SeaWorld includes, “Cell Line” Research with the San Diego Zoo, in which the umbilical cord of a calf born at SeaWorld (previous attempts in the wild were unsuccessful), was used to help establish a “killer whale fibroblast cell line”. Essentially, these are killer whale cells that play a critical role in wound healing and can be replicated in vitro in a laboratory setting. The hope is to research the impact of specific toxins and viruses on killer whales and to understand how things such as mercury or certain infectious organisms impact wild populations. <a href='#10'><sup>[10]</sup></a></p>
+            <p>So, where does the acorn land in the debate between having captive orcas being inhumane, or a great educational opportunity? I believe that it lands close to the middle but with definite opportunities for improvement if we are to continue having captive orcas. While, it cannot be disputed that captive orcas have indeed caused the death or injury of several trainers, and that current tank sizes are no where near adequate to give them the freedom of movement they desire and deserve. It is also ignorant to believe that there is no place for the educational and research sides of establishments such as SeaWorld.</p>
+            <p>I strongly believe in the motto, “When you learn better, you do better.” I believe that it is shameful with our understanding of orcas as family oriented animals, with life long bonds, who even “speak” in unique dialects, to have SeaWorld separating mothers and calves that they have bred in captivity. <a href='#7'><sup>[7]</sup></a> I believe that even in their small tanks, this bond if preserved, may make their existence in captivity more bearable. However, to stifle the ability of places like SeaWorld to keep or breed killer whales could have unintended consequences, such as preventing SeaWorld to act if there are unforeseen or unintended population crashes in the wild.</p>
+            <p>I see no need for trainers to be swimming with the orcas. If SeaWorld truly believes that seeing an orca is an inspirational experience, that promotes positive changes in our stewardship of the world <a href='#10'><sup>[10]</sup></a>, it should be sufficient to see one without a trainer on its back. I would also like to see the possibility of an oceanic pen similar to the retirement pen that Keiko was in prior to his release <a href='#5'><sup>[5]</sup></a>, that is more conducive of their natural habitat, instead of a swimming pool.</p>
+          </div>
+          <!--/.iepBody-->
+        </div>
+        <!--/.col-md-8-->
+      </div>
+      <!--/.row-->
+    </div>
+    <!--/.container-->
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-offset-2 col-md-8'>
+          <div class='worksCited'>
+            <ol>
+              <li name='1'>A Life Among Whales. By Bill Haney. Dir. Bill Haney. Perf. Roger Payne, et al. Uncommon Productions. Digital Media Rights; Public Broadcasting Service (PBS), 2005. Film. 4 2016.</li>
+              <li name='2'>Blackfish. By Gabriela Cowperthwaite, Eli B. Despres and Tim Zimmermann. Dir. Gabriela Cowperthwaite. Perf. Tilikum, et al. Prod. Gabriela Cowperthwaite. Magnolia Pictures, 2013. 4 2016.</li>
+              <li name='3'>Bradford, Alina. "Orcas: Facts About Killer Whales." LiveScience 20 November 2014. Web. 02 May 2016.</li>
+              <li name='4'>Buff, Elizabeth. Orcas Are More Emotionally Complex Than Humans, and Other Facts About These Awesome Mammals. 14 November 2014. Web. 15 May 2016.<a href='' target='_blank'> &lt;http://onegreenplanet.org/animalsandnature/amazing-facts-about-orcas/&gt;</a>.</li>
+              <li name='5'>Cousteau, Jean-Michel. Keiko's Amazing Odyssey. 24 August 2015. Earth Island Institute. Web. 5 April 2016. &lt;http://savedolphins.eii.org/campaigns/kwr&gt;.</li>
+              <li name='6'>Jacobs, Stefan. Incidents between Humans and Killer Whales in Captivity -a Longer List than the Parks Would like to Tell You! 20 April 2016. Web. 5 April 2016. &lt;http://www.orcahome.de/incidents.htm&gt;.</li>
+              <li name='7'>Killer Whales (Orca), Killer Wale Pictures, Killer Whale Facts - National Geographic. n.d. Web. 02 May 2016. &lt;http://animals.nationalgeographic.com/animals/mammals/killer-whale/&gt;.</li>
+              <li name='8'>Press, Associated. "Scientists bemoan SeaWorld Decision to stop breading orcas." KSL.com 4 4 2016. Web. 4 5 2016.</li>
+              <li name='9'>—. "The Latest: Trainers say SeaWorld is committed to orca care." KSL.com 17 March 2016. Web.</li>
+              <li name='10'>Research Helps Wild Whales. 2016. SeaWorld Parks & Entertainment, Inc. Web. 02 May 2016. &lt;https://seaworldcares.com/research/research-helps-wild-whales/&gt;.</li>
+              <li name='11'>Stein, Joel. These Are Time's 100 Most Influential Animals of 2016. 21 April 2016. Web. 2 May 2016. &lt;http://time.com/4301509/most-influential-animals/&gt;.</li>
+              <li name='12'>The Whale. Dirs. Suzanne Chisholm and Michael Parfit. Perf. Ryan Reynolds. Prod. Suzanne Chisholm. 2013. Film. 4 2013.</li>
+              <li name='13'>Tilikum (orca). 1 May 2016. Wikimedia Foundation. Web. 2 May 2016. &lt;https://en.wikipedia.org/wiki/Tilikum_(orca)&gt;.</li>
+              <li name='14'>Watson, Julie and Mike Schneider. "SeaWorld to end orca shows by 2017 in San Diego." KSL.com 9 November 2015. Web.</li>
+              <li name='15'>Whiting, Candace Calloway. SeaWorld Tanks – Why Bigger Will Never Be Big Enough. 23 April 2015. Web. 5 April 2016. &lt;http://blog.seattlepi.com/candacewhiting/2015/04/23/seaworld-tanks-why-bigger-will-never-be-big-enough/&gt;.</li>
+            </ol>
+          </div>
+          <!--/.worksCited-->
+        </div>
+        <!--/.col-xs-12'>
+      </div><!--/.row-->
+      </div>
+      <!--/.container-->
+    </div>
+    <!--/.iepBckgrnd-->
+  </div>
+  <!--iep-->
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
