--- a/english/english.html
+++ b/english/english.html
@@ -35,14 +35,14 @@
         <!--Other Navbar links for toggling-->
         <div class='collapse navbar-collapse navbar-right' id='navbar-main-menu'>
           <ul class='nav navbar-nav'>
-            <li class='home-btn'><a href=''>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
-            <li class='about-btn'><a href='#about'>About Me</a></li>
+            <li class='home-btn'><a href='../index.html'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
+            <li class='about-btn'><a href='../index.html#about'>About Me</a></li>
             <li class='dropdown'>
               <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses
               </a>
               <ul class='dropdown-menu'>
                 <li><a href='#English'>English</a></li>
-                <li><a href='#'>Math</a></li>
+                <li><a href='../eportfolio/math/math.html'>Math</a></li>
               </ul>
             </li>
           </ul><!--/.navbar-nav-->
@@ -70,7 +70,7 @@
                   <p>This course has really helped me to view the world more in depth and attentively, giving me a better understanding of the many human differences we have, and how each of us can be appreciated for our authentic self. I already believe in putting yourself “into someone else’s shoes”, but the IEP was practice in doing so.  It provided opportunities to put my personal opinions to the test and provide perspective for personally held beliefs, as well as preconceived notions that society may have. It is one thing to hear the phrase “captive orcas live in a bathtub” and another entirely to read the statistics related to orcas for yourself.</p>
                   <p>My process was largely gathering information, until I felt confident that I had built up a database of relevant, compelling, and usable information. Secondly, it was constructing my paper in an organized manner that allowed for the best dialogue in writing my IEP, while exploring and responding to three distinctly different points of view. Having enough time was definitely a challenge with this project. With the help of technology I made the time I had more effective. I collected information into categories, which made my outline easier to construct, and the writing process overall smoother.</p>
                   <p>Doing an Issue Exploration Paper has given me the ability to demonstrate the significant strides I have made in writing complex papers, by flexing the ability to effectively reason, and using the available information and evidence to build on alternative perspectives when writing. This project has been a platform to use the new skills learned during this semester. I can now recognize and implement rhetorical appeals, and strategies to convey my messages in writing, and other formats; use critical thinking to enhance the complexity of my writing; and have confidence in my work, and ability to effectively analyze material.</p>
-                  <li><a href='#'>Issue Exploration Paper <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+                  <li><a href='./iep/issueExploration.html'>Issue Exploration Paper <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                 </ul>
               </div><!--/.class-->
             </div><!--/.col-lg-6-->
