--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <ul class='dropdown-menu'>
             <li><a href='.\english\english.html'>English</a></li>
             <li><a href='.\math\math.html'>Math</a></li>
+            <li><a href='.\biology\'>Biology</a></li>
           </ul>
         </li>
       </ul>
