--- a/math/math.html
+++ b/math/math.html
@@ -41,6 +41,7 @@
           <ul class='dropdown-menu'>
             <li><a href='../english/english.html'>English</a></li>
             <li><a href='#math'>Math</a></li>
+            <li><a href='../biology/'>Biology</a></li>
           </ul>
         </li>
       </ul><!--/.navbar-nav-->
