--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <a class='dropdown-toggle' data-toggle='dropdown' href='#'>Portfolio
           </a>
           <ul class='dropdown-menu'>
-            <li><a href='.\english\english.html'>English</a></li>
-            <li><a href='.\math\math.html'>Math</a></li>
+            <li><a href='.\english\'>English</a></li>
+            <li><a href='.\math\'>Math</a></li>
             <li><a href='.\biology\'>Biology</a></li>
           </ul>
         </li>
