--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class='sr-only'>Toggle Navigation</span><!--For screen reader-->
         <span class='fa fa-bars fa-2x'></span>
       </button>
-      <a class='navbar-brand' href='' target='_blank'>Ashley Dix</a>
+      <span class='navbar-brand' >Ashley Dix</span>
     </div>
     <!--Other Navbar links for toggling-->
     <div class='collapse navbar-collapse navbar-right' id='navbar-main-menu'>
@@ -31,12 +31,12 @@
         <li class='home-btn'><a href='#home'>Home</a><span class='sr-only'></span></li>
         <li class='about-btn'><a href='#about'>About</a></li>
         <li class='dropdown'>
-          <a class='dropdown-toggle' data-toggle='dropdown' href='#'>Portfolio
+          <a class='dropdown-toggle' data-toggle='dropdown-menu'>Portfolio
           </a>
           <ul class='dropdown-menu'>
-            <li><a href='.\english\'>English</a></li>
-            <li><a href='.\math\'>Math</a></li>
-            <li><a href='.\biology\'>Biology</a></li>
+            <li><a href='english/'>English</a></li>
+            <li><a href='math/'>Math</a></li>
+            <li><a href='biology/'>Biology</a></li>
           </ul>
         </li>
       </ul>
@@ -81,8 +81,8 @@
     </div><!--/.aboutBckgrnd-->
 </div><!--/#about-->
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
     
     
