--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <li class='home-btn'><a href='#home'>Home</a><span class='sr-only'></span></li>
         <li class='about-btn'><a href='#about'>About</a></li>
         <li class='dropdown'>
-          <a class='dropdown-toggle' data-toggle='dropdown-menu'>Portfolio
-          </a>
+          <a class='dropdown-toggle' data-toggle='dropdown' href='#'>Portfolio<span class="caret"></span></a>
           <ul class='dropdown-menu'>
             <li><a href='english/'>English</a></li>
             <li><a href='math/'>Math</a></li>
