--- a/math/index.html
+++ b/math/index.html
@@ -32,14 +32,13 @@
     <!--Other Navbar links for toggling-->
     <div class='collapse navbar-collapse navbar-right' id='navbar-main-menu'>
       <ul class='nav navbar-nav'>
-        <li class='home-btn'><a href='..\'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
-        <li class='about-btn'><a href='..\#about'>About Me</a></li>
+        <li class='home-btn'><a href='../'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
+        <li class='about-btn'><a href='../#about'>About Me</a></li>
         <li class='dropdown'>
-          <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses
-          </a>
+          <a class='dropdown-toggle' data-toggle='dropdown' href='#'>Portfolio<span class='caret'></span></a>
           <ul class='dropdown-menu'>
             <li><a href='../english/'>English</a></li>
-            <li><a href='#'>Math</a></li>
+            <li><a href=''>Math</a></li>
             <li><a href='../biology/'>Biology</a></li>
           </ul>
         </li>
@@ -64,18 +63,18 @@
         <div class='col-lg-4'>
           <div class='class'>
             <h4>Math 0950</h4>
-            <ul>
+            <!--<ul>
               <li><a href='#'></a></li>
               <li><a href='#'></a></li>
-            </ul>
+            </ul>-->
           </div><!--/.class-->
         </div><!--/.col-lg-4-->
       </div><!--/.row-->
     </div><!--/.container-->
   </div><!--/.math-->
 </div><!--/.mathBckgrnd-->
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
     
     
