--- a/english/index.html
+++ b/english/index.html
@@ -35,9 +35,9 @@
             <li class='dropdown'>
               <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses</a>
               <ul class='dropdown-menu'>
-                <li><a href='#English'>English</a></li>
-                <li><a href='../eportfolio/math/'>Math</a></li>
-                <li><a href='../eportfolio/biology/'>Biology</a></li>
+                <li><a href=''>English</a></li>
+                <li><a href='../math/'>Math</a></li>
+                <li><a href='../biology/'>Biology</a></li>
               </ul>
             </li>
           </ul><!--/.navbar-nav-->
@@ -74,8 +74,8 @@
       </div><!--/.english-->
     </div><!--/.engBckgrnd-->
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-    <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
     
   </body>
 </html>
