--- a/english/index.html
+++ b/english/index.html
@@ -33,7 +33,7 @@
             <li class='home-btn'><a href='../'>Home</a><span class='sr-only'></span></li><!--/.home-btn-->
             <li class='about-btn'><a href='../#about'>About Me</a></li>
             <li class='dropdown'>
-              <a class='dropdown-toggle' data-toggle='dropdown' href='#'>ePortfolio Courses</a>
+              <a class='dropdown-toggle' data-toggle='dropdown' href='#'>Portfolio<span class='caret'></span></a>
               <ul class='dropdown-menu'>
                 <li><a href=''>English</a></li>
                 <li><a href='../math/'>Math</a></li>
